readme.md added

--- a/src/output.css
+++ b/src/output.css
@@ -749,6 +749,11 @@ video {
   background-color: rgba(0,0,0,0.6);
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[url\(\'https\:\/\/assets\.nflxext\.com\/ffe\/siteui\/vlv3\/0cf2c109-3af1-4a9d-87d7-aecfac5fe881\/web\/IN-en-20250217-TRIFECTA-perspective_c3376e06-9aff-4657-aafb-91256a597b7c_large\.jpg\'\)\] {
   background-image: url('https://assets.nflxext.com/ffe/siteui/vlv3/0cf2c109-3af1-4a9d-87d7-aecfac5fe881/web/IN-en-20250217-TRIFECTA-perspective_c3376e06-9aff-4657-aafb-91256a597b7c_large.jpg');
 }
